namespace bmi_calculator_core;

public interface IBMICategoryInterpreter
{
    string InterpretBMI(double bmi);
}